k8s/app.yaml
apiVersion: v1
kind: Pod
metadata:
   name: static-web
spec:
  containers:
    - name: web 
      image: nginx:latest
      ports:
       - name: web 
         containerPort: 80
         protocol: TCP
