k8s/auth.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: new-deployment
spec:
  serviceAccountName: rg
  replicas: 2
  template:
    metadata:
      labels:
        editor: vscode
    spec:
      containers:
      - name: nginx-container
        image: nginx
