k8s/configmaps.yaml
# Now to use this config map in a pod, we can reference it in the pod spec.
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod
  namespace: default
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
  restartPolicy: Always
