k8s/daemonset.yaml

## Like the deployment, DaemonSet also ensures that a copy of a pod is running on all (or some) nodes in the cluster.
## However, unlike Deployment which manages replicas of pods through ReplicaSets, DaemonSet ensures that a pod runs on every node (or a specified subset of nodes) in the cluster.
## This is particularly useful for running background tasks or services that need to be present on all nodes, such as log collection agents, monitoring agents, or network proxies.
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemonset
spec:   
  # nodeSelector:
  #   disktype: ssd   ## to run on specific nodes only ( nodes with label disktype=ssd)
  selector: 
    matchLabels:
       app: nginx-daemonset
  template:
    metadata:
      labels:
        app: nginx-daemonset
    spec:
      containers:
      - name: ctr1
        image: nginx
