k8s/resource_utilization.yaml
# Resource utilization configuration
# Limits , requests and quotas for CPU and memory resources
# They can be defined at the container, pod, or namespace level
# This file serves as a template for setting resource constraints in a Kubernetes environment

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: Enter deployment name
spec:
  replicas: Enter the number of replicas
  template:
    metadata:
      labels:
        editor: vscode
    spec:
      containers:
      - name: name
        image: Enter containers image
        resources:
          requests:
            memory: "128Mi"  # Minimum memory required
            cpu: "250m"      # Minimum CPU required
          limits:
            memory: "512Mi"  # Maximum memory allowed
            cpu: "500m"      # Maximum CPU allowed
