k8s/statefulset.yaml
# A higher level controller like deployment but used for stateful applications
# Ensures that pods are created in order and have persistent identities and storage
# A pod is unique with it's own unique identity
# Useful for databases and other stateful applications that require stable network identities and persistent storage
# ordered, graceful deployment and scaling
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefulset
spec:   
  selector: 
    matchLabels:
       app: nginx-statefulset
  serviceName: "nginx-service"  # Headless service to manage network identities
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx-statefulset
    spec:
      containers:
      - name: ctr1
        image: nginx
